@@ -1,7 +1,5 @@
 /*
- * $Id$
- *
- * Copyright (c) 2006 VeriSign. All rights reserved.
+ * Copyright (c) 2006, 2022 Verisign. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions are met:
@@ -30,8 +28,22 @@
 package com.verisignlabs.dnssec.security;
 
 import java.math.BigInteger;
-import java.security.*;
-import java.security.spec.*;
+import java.security.AlgorithmParameters;
+import java.security.InvalidAlgorithmParameterException;
+import java.security.KeyPair;
+import java.security.KeyPairGenerator;
+import java.security.NoSuchAlgorithmException;
+import java.security.Provider;
+import java.security.SecureRandom;
+import java.security.Security;
+import java.security.Signature;
+import java.security.spec.ECFieldFp;
+import java.security.spec.ECGenParameterSpec;
+import java.security.spec.ECParameterSpec;
+import java.security.spec.ECPoint;
+import java.security.spec.EllipticCurve;
+import java.security.spec.InvalidParameterSpecException;
+import java.security.spec.RSAKeyGenParameterSpec;
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.Set;
@@ -39,10 +51,11 @@ import java.util.logging.Logger;
 
 import org.xbill.DNS.DNSSEC;
 
+import net.i2p.crypto.eddsa.spec.EdDSANamedCurveTable;
 // for now, we need to import the EdDSA parameter spec classes
 // because they have no generic form in java.security.spec.*
 // sadly, this will currently fail if you don't have the lib.
-import net.i2p.crypto.eddsa.spec.*;
+import net.i2p.crypto.eddsa.spec.EdDSAParameterSpec;
 
 /**
  * This class handles translating DNS signing algorithm identifiers into various
@@ -53,57 +66,48 @@ import net.i2p.crypto.eddsa.spec.*;
  * aliasing -- that is, defining a new algorithm identifier to be equivalent to
  * an existing identifier.
  *
- * @author David Blacka (orig)
- * @author $Author: davidb $ (latest)
- * @version $Revision: 2098 $
+ * @author David Blacka
  */
-public class DnsKeyAlgorithm
-{
+public class DnsKeyAlgorithm {
 
   // Our base algorithm numbers. This is a normalization of the DNSSEC
   // algorithms (which are really signature algorithms). Thus RSASHA1,
   // RSASHA256, etc. all boil down to 'RSA' here.
-  public static final int UNKNOWN    = -1;
-  public static final int RSA        = 1;
-  public static final int DH         = 2;
-  public static final int DSA        = 3;
-  public static final int ECC_GOST   = 4;
-  public static final int ECDSA      = 5;
-  public static final int EDDSA      = 6;
+  public static final int UNKNOWN  = -1;
+  public static final int RSA      = 1;
+  public static final int DH       = 2;
+  public static final int DSA      = 3;
+  public static final int ECC_GOST = 4;
+  public static final int ECDSA    = 5;
+  public static final int EDDSA    = 6;
 
-  private static class AlgEntry
-  {
-    public int    dnssecAlgorithm;
+  private static class AlgEntry {
+    public int dnssecAlgorithm;
     public String sigName;
-    public int    baseType;
+    public int baseType;
 
-    public AlgEntry(int algorithm, String sigName, int baseType)
-    {
+    public AlgEntry(int algorithm, String sigName, int baseType) {
       this.dnssecAlgorithm = algorithm;
-      this.sigName         = sigName;
-      this.baseType        = baseType;
+      this.sigName = sigName;
+      this.baseType = baseType;
     }
   }
 
-  private static class ECAlgEntry extends AlgEntry
-  {
-    public ECParameterSpec ec_spec;
+  private static class ECAlgEntry extends AlgEntry {
+    public ECParameterSpec ecSpec;
 
-    public ECAlgEntry(int algorithm, String sigName, int baseType, ECParameterSpec spec)
-    {
+    public ECAlgEntry(int algorithm, String sigName, int baseType, ECParameterSpec spec) {
       super(algorithm, sigName, baseType);
-      this.ec_spec = spec;
+      this.ecSpec = spec;
     }
   }
 
-  private static class EdAlgEntry extends AlgEntry
-  {
-    public EdDSAParameterSpec ed_spec;
+  private static class EdAlgEntry extends AlgEntry {
+    public EdDSAParameterSpec edSpec;
 
-    public EdAlgEntry(int algorithm, String sigName, int baseType, EdDSAParameterSpec spec)
-    {
+    public EdAlgEntry(int algorithm, String sigName, int baseType, EdDSAParameterSpec spec) {
       super(algorithm, sigName, baseType);
-      this.ed_spec = spec;
+      this.edSpec = spec;
     }
   }
 
@@ -111,7 +115,7 @@ public class DnsKeyAlgorithm
    * This is a mapping of algorithm identifier to Entry. The Entry contains the
    * data needed to map the algorithm to the various crypto implementations.
    */
-  private HashMap<Integer, AlgEntry>  mAlgorithmMap;
+  private HashMap<Integer, AlgEntry> mAlgorithmMap;
   /**
    * This is a mapping of algorithm mnemonics to algorithm identifiers.
    */
@@ -123,53 +127,50 @@ public class DnsKeyAlgorithm
   private HashMap<Integer, String> mIdToMnemonicMap;
 
   /** This is a cached key pair generator for RSA keys. */
-  private KeyPairGenerator         mRSAKeyGenerator;
+  private KeyPairGenerator mRSAKeyGenerator;
   /** This is a cached key pair generator for DSA keys. */
-  private KeyPairGenerator         mDSAKeyGenerator;
+  private KeyPairGenerator mDSAKeyGenerator;
   /** This is a cached key pair generator for ECC GOST keys. */
-  private KeyPairGenerator         mECGOSTKeyGenerator;
+  private KeyPairGenerator mECGOSTKeyGenerator;
   /** This is a cached key pair generator for ECDSA_P256 keys. */
-  private KeyPairGenerator         mECKeyGenerator;
+  private KeyPairGenerator mECKeyGenerator;
   /** This is a cached key pair generator for EdDSA keys. */
-  private KeyPairGenerator         mEdKeyGenerator;
+  private KeyPairGenerator mEdKeyGenerator;
 
-  private Logger                   log = Logger.getLogger(this.getClass().toString());
+  private Logger log = Logger.getLogger(this.getClass().toString());
 
   /** This is the global instance for this class. */
-  private static DnsKeyAlgorithm   mInstance = null;
+  private static DnsKeyAlgorithm mInstance = null;
 
-  public DnsKeyAlgorithm()
-  {
+  public DnsKeyAlgorithm() {
     // Attempt to add the bouncycastle provider.
     // This is so we can use this provider if it is available, but not require
     // the user to add it as one of the java.security providers.
-    try
-    {
+    try {
       Class<?> bc_provider_class = Class.forName("org.bouncycastle.jce.provider.BouncyCastleProvider");
-      Provider bc_provider = (Provider) bc_provider_class.newInstance();
+      // Provider bc_provider = (Provider) bc_provider_class.newInstance();
+      Provider bc_provider = (Provider) bc_provider_class.getDeclaredConstructor().newInstance();
       Security.addProvider(bc_provider);
+    } catch (ReflectiveOperationException e) {
     }
-    catch (ReflectiveOperationException e) { }
 
     // Attempt to add the EdDSA-Java provider.
-    try
-    {
+    try {
       Class<?> eddsa_provider_class = Class.forName("net.i2p.crypto.eddsa.EdDSASecurityProvider");
-      Provider eddsa_provider = (Provider) eddsa_provider_class.newInstance();
+      // Provider eddsa_provider = (Provider) eddsa_provider_class.newInstance();
+      Provider eddsa_provider = (Provider) eddsa_provider_class.getDeclaredConstructor().newInstance();
       Security.addProvider(eddsa_provider);
-    }
-    catch (ReflectiveOperationException e) {
+    } catch (ReflectiveOperationException e) {
       log.warning("Unable to load EdDSA provider");
     }
 
     initialize();
   }
 
-  private void initialize()
-  {
-    mAlgorithmMap    = new HashMap<Integer, AlgEntry>();
-    mMnemonicToIdMap = new HashMap<String, Integer>();
-    mIdToMnemonicMap = new HashMap<Integer, String>();
+  private void initialize() {
+    mAlgorithmMap = new HashMap<>();
+    mMnemonicToIdMap = new HashMap<>();
+    mIdToMnemonicMap = new HashMap<>();
 
     // Load the standard DNSSEC algorithms.
     addAlgorithm(DNSSEC.Algorithm.RSAMD5, "MD5withRSA", RSA);
@@ -216,25 +217,24 @@ public class DnsKeyAlgorithm
     addMnemonic("ECDSA-P384", DNSSEC.Algorithm.ECDSAP384SHA384);
 
     // EdDSA is not supported by either the Java 1.8 Sun crypto
-    // provider or bouncycastle.  It is added by the Ed25519-Java
-    // library.  We don't have a corresponding constant in
+    // provider or bouncycastle. It is added by the Ed25519-Java
+    // library. We don't have a corresponding constant in
     // org.xbill.DNS.DNSSEC yet, though.
     addAlgorithm(15, "NONEwithEdDSA", EDDSA, "Ed25519");
     addMnemonic("ED25519", 15);
   }
 
-  private void addAlgorithm(int algorithm, String sigName, int baseType)
-  {
+  private void addAlgorithm(int algorithm, String sigName, int baseType) {
     mAlgorithmMap.put(algorithm, new AlgEntry(algorithm, sigName, baseType));
   }
 
-  private void addAlgorithm(int algorithm, String sigName, int baseType, String curveName)
-  {
-    if (baseType == ECDSA)
-    {
-      ECParameterSpec ec_spec = ECSpecFromAlgorithm(algorithm);
-      if (ec_spec == null) ec_spec = ECSpecFromName(curveName);
-      if (ec_spec == null) return;
+  private void addAlgorithm(int algorithm, String sigName, int baseType, String curveName) {
+    if (baseType == ECDSA) {
+      ECParameterSpec ecSpec = ECSpecFromAlgorithm(algorithm);
+      if (ecSpec == null)
+        ecSpec = ECSpecFromName(curveName);
+      if (ecSpec == null)
+        return;
 
       // Check to see if we can get a Signature object for this algorithm.
       try {
@@ -245,13 +245,12 @@ public class DnsKeyAlgorithm
         // If not, do not add the algorithm.
         return;
       }
-      ECAlgEntry entry = new ECAlgEntry(algorithm, sigName, baseType, ec_spec);
+      ECAlgEntry entry = new ECAlgEntry(algorithm, sigName, baseType, ecSpec);
       mAlgorithmMap.put(algorithm, entry);
-    }
-    else if (baseType == EDDSA)
-    {
-      EdDSAParameterSpec ed_spec = EdDSASpecFromName(curveName);
-      if (ed_spec == null) return;
+    } else if (baseType == EDDSA) {
+      EdDSAParameterSpec edSpec = EdDSASpecFromName(curveName);
+      if (edSpec == null)
+        return;
 
       // Check to see if we can get a Signature object for this algorithm.
       try {
@@ -262,35 +261,29 @@ public class DnsKeyAlgorithm
         // If not, do not add the algorithm.
         return;
       }
-      EdAlgEntry entry = new EdAlgEntry(algorithm, sigName, baseType, ed_spec);
+      EdAlgEntry entry = new EdAlgEntry(algorithm, sigName, baseType, edSpec);
       mAlgorithmMap.put(algorithm, entry);
     }
-
 
   }
 
-  private void addMnemonic(String m, int alg)
-  {
-    // Do not add mnemonics for algorithms that ended up not actually being supported.
-    if (!mAlgorithmMap.containsKey(alg)) return;
+  private void addMnemonic(String m, int alg) {
+    // Do not add mnemonics for algorithms that ended up not actually being
+    // supported.
+    if (!mAlgorithmMap.containsKey(alg))
+      return;
 
     mMnemonicToIdMap.put(m.toUpperCase(), alg);
-    if (!mIdToMnemonicMap.containsKey(alg))
-    {
-      mIdToMnemonicMap.put(alg, m);
-    }
+    mIdToMnemonicMap.computeIfAbsent(alg, k -> m);
   }
 
-  public void addAlias(int alias, String mnemonic, int original_algorithm)
-  {
-    if (mAlgorithmMap.containsKey(alias))
-    {
+  public void addAlias(int alias, String mnemonic, int original_algorithm) {
+    if (mAlgorithmMap.containsKey(alias)) {
       log.warning("Unable to alias algorithm " + alias + " because it already exists.");
       return;
     }
 
-    if (!mAlgorithmMap.containsKey(original_algorithm))
-    {
+    if (!mAlgorithmMap.containsKey(original_algorithm)) {
       log.warning("Unable to alias algorithm " + alias
           + " to unknown algorithm identifier " + original_algorithm);
       return;
@@ -298,33 +291,28 @@ public class DnsKeyAlgorithm
 
     mAlgorithmMap.put(alias, mAlgorithmMap.get(original_algorithm));
 
-    if (mnemonic != null)
-    {
+    if (mnemonic != null) {
       addMnemonic(mnemonic, alias);
     }
   }
 
-  private AlgEntry getEntry(int alg)
-  {
+  private AlgEntry getEntry(int alg) {
     return mAlgorithmMap.get(alg);
   }
 
   // For curves where we don't (or can't) get the parameters from a standard
   // name, we can construct the parameters here. For now, we only do this for
   // the ECC-GOST curve.
-  private ECParameterSpec ECSpecFromAlgorithm(int algorithm)
-  {
-    switch (algorithm)
-    {
-      case DNSSEC.Algorithm.ECC_GOST:
-      {
+  private ECParameterSpec ECSpecFromAlgorithm(int algorithm) {
+    switch (algorithm) {
+      case DNSSEC.Algorithm.ECC_GOST: {
         // From RFC 4357 Section 11.4
-        BigInteger p  = new BigInteger("FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFD97", 16);
-        BigInteger a  = new BigInteger("FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFD94", 16);
-        BigInteger b  = new BigInteger("A6", 16);
+        BigInteger p = new BigInteger("FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFD97", 16);
+        BigInteger a = new BigInteger("FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFD94", 16);
+        BigInteger b = new BigInteger("A6", 16);
         BigInteger gx = new BigInteger("1", 16);
         BigInteger gy = new BigInteger("8D91E471E0989CDA27DF505A453F2B7635294F2DDF23E3B122ACC99C9E9F1E14", 16);
-        BigInteger n  = new BigInteger( "FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF6C611070995AD10045841B09B761B893", 16);
+        BigInteger n = new BigInteger("FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF6C611070995AD10045841B09B761B893", 16);
 
         EllipticCurve curve = new EllipticCurve(new ECFieldFp(p), a, b);
         return new ECParameterSpec(curve, new ECPoint(gx, gy), n, 1);
@@ -335,35 +323,31 @@ public class DnsKeyAlgorithm
   }
 
   // Fetch the curve parameters from a named ECDSA curve.
-  private ECParameterSpec ECSpecFromName(String stdName)
-  {
-    try
-    {
+  private ECParameterSpec ECSpecFromName(String stdName) {
+    try {
       AlgorithmParameters ap = AlgorithmParameters.getInstance("EC");
       ECGenParameterSpec ecg_spec = new ECGenParameterSpec(stdName);
       ap.init(ecg_spec);
       return ap.getParameterSpec(ECParameterSpec.class);
-    }
-    catch (NoSuchAlgorithmException e) {
+    } catch (NoSuchAlgorithmException e) {
       log.info("Elliptic Curve not supported by any crypto provider: " + e.getMessage());
-    }
-    catch (InvalidParameterSpecException e) {
+    } catch (InvalidParameterSpecException e) {
       log.info("Elliptic Curve " + stdName + " not supported");
     }
     return null;
   }
 
   // Fetch the curve parameters from a named EdDSA curve.
-  private EdDSAParameterSpec EdDSASpecFromName(String stdName)
-  {
-    try
-    {
+  private EdDSAParameterSpec EdDSASpecFromName(String stdName) {
+    try {
       EdDSAParameterSpec spec = EdDSANamedCurveTable.getByName(stdName);
-      if (spec != null) return spec;
+      if (spec != null)
+        return spec;
       throw new InvalidParameterSpecException("Edwards Curve " + stdName + " not found.");
     }
     // catch (NoSuchAlgorithmException e) {
-    //   log.info("Edwards Curve not supported by any crypto provider: " + e.getMessage());
+    // log.info("Edwards Curve not supported by any crypto provider: " +
+    // e.getMessage());
     // }
     catch (InvalidParameterSpecException e) {
       log.info("Edwards Curve " + stdName + " not supported");
@@ -371,15 +355,13 @@ public class DnsKeyAlgorithm
     return null;
   }
 
-  public String[] supportedAlgMnemonics()
-  {
+  public String[] supportedAlgMnemonics() {
     Set<Integer> keyset = mAlgorithmMap.keySet();
     Integer[] algs = keyset.toArray(new Integer[keyset.size()]);
     Arrays.sort(algs);
 
     String[] result = new String[algs.length];
-    for (int i = 0; i < algs.length; i++)
-    {
+    for (int i = 0; i < algs.length; i++) {
       result[i] = mIdToMnemonicMap.get(algs[i]);
     }
 
@@ -388,22 +370,20 @@ public class DnsKeyAlgorithm
 
   /**
    * Return a Signature object for the specified DNSSEC algorithm.
+   * 
    * @param algorithm The DNSSEC algorithm (by number).
    * @return a Signature object.
    */
-  public Signature getSignature(int algorithm)
-  {
+  public Signature getSignature(int algorithm) {
     AlgEntry entry = getEntry(algorithm);
-    if (entry == null) return null;
+    if (entry == null)
+      return null;
 
     Signature s = null;
 
-    try
-    {
+    try {
       s = Signature.getInstance(entry.sigName);
-    }
-    catch (NoSuchAlgorithmException e)
-    {
+    } catch (NoSuchAlgorithmException e) {
       log.severe("Unable to get signature implementation for algorithm " + algorithm
           + ": " + e);
     }
@@ -416,36 +396,39 @@ public class DnsKeyAlgorithm
    * the elliptic curve parameters.
    *
    * @param algorithm
-   *          The DNSSEC algorithm number.
+   *                  The DNSSEC algorithm number.
    * @return The calculated JCA ECParameterSpec for that DNSSEC algorithm, or
    *         null if not a recognized/supported EC algorithm.
    */
-  public ECParameterSpec getEllipticCurveParams(int algorithm)
-  {
+  public ECParameterSpec getEllipticCurveParams(int algorithm) {
     AlgEntry entry = getEntry(algorithm);
-    if (entry == null) return null;
-    if (!(entry instanceof ECAlgEntry)) return null;
+    if (entry == null)
+      return null;
+    if (!(entry instanceof ECAlgEntry))
+      return null;
     ECAlgEntry ec_entry = (ECAlgEntry) entry;
 
-    return ec_entry.ec_spec;
+    return ec_entry.ecSpec;
   }
 
-  /** Given one of the EdDSA algorithms (Ed25519, Ed448) return the
+  /**
+   * Given one of the EdDSA algorithms (Ed25519, Ed448) return the
    * elliptic curve parameters.
    *
    * @param algorithm
-   *          The DNSSEC algorithm number.
+   *                  The DNSSEC algorithm number.
    * @return The stored EdDSAParameterSpec for that algorithm, or
    *         null if not a recognized/supported EdDSA algorithm.
    */
-  public EdDSAParameterSpec getEdwardsCurveParams(int algorithm)
-  {
+  public EdDSAParameterSpec getEdwardsCurveParams(int algorithm) {
     AlgEntry entry = getEntry(algorithm);
-    if (entry == null) return null;
-    if (!(entry instanceof EdAlgEntry)) return null;
+    if (entry == null)
+      return null;
+    if (!(entry instanceof EdAlgEntry))
+      return null;
     EdAlgEntry ed_entry = (EdAlgEntry) entry;
 
-    return ed_entry.ed_spec;
+    return ed_entry.edSpec;
   }
 
   /**
@@ -453,14 +436,14 @@ public class DnsKeyAlgorithm
    * number
    *
    * @param algorithm
-   *          a DNSSEC algorithm that may be an alias.
+   *                  a DNSSEC algorithm that may be an alias.
    * @return -1 if the algorithm isn't recognised, the orignal algorithm number
    *         if it is.
    */
-  public int originalAlgorithm(int algorithm)
-  {
+  public int originalAlgorithm(int algorithm) {
     AlgEntry entry = getEntry(algorithm);
-    if (entry == null) return -1;
+    if (entry == null)
+      return -1;
     return entry.dnssecAlgorithm;
   }
 
@@ -468,11 +451,12 @@ public class DnsKeyAlgorithm
    * Test if a given algorithm is supported.
    *
    * @param algorithm The DNSSEC algorithm number.
-   * @return true if the algorithm is a recognized and supported algorithm or alias.
+   * @return true if the algorithm is a recognized and supported algorithm or
+   *         alias.
    */
-  public boolean supportedAlgorithm(int algorithm)
-  {
-    if (mAlgorithmMap.containsKey(algorithm)) return true;
+  public boolean supportedAlgorithm(int algorithm) {
+    if (mAlgorithmMap.containsKey(algorithm))
+      return true;
     return false;
   }
 
@@ -485,10 +469,10 @@ public class DnsKeyAlgorithm
    * @return -1 if the mnemonic isn't recognized or supported, the algorithm
    *         number if it is.
    */
-  public int stringToAlgorithm(String s)
-  {
+  public int stringToAlgorithm(String s) {
     Integer alg = mMnemonicToIdMap.get(s.toUpperCase());
-    if (alg != null) return alg.intValue();
+    if (alg != null)
+      return alg.intValue();
     return -1;
   }
 
@@ -496,55 +480,43 @@ public class DnsKeyAlgorithm
    * Given a DNSSEC algorithm number, return the "preferred" mnemonic.
    *
    * @param algorithm
-   *          A DNSSEC algorithm number.
+   *                  A DNSSEC algorithm number.
    * @return The preferred mnemonic string, or null if not supported or
    *         recognized.
    */
-  public String algToString(int algorithm)
-  {
+  public String algToString(int algorithm) {
     return mIdToMnemonicMap.get(algorithm);
   }
 
-  public int baseType(int algorithm)
-  {
+  public int baseType(int algorithm) {
     AlgEntry entry = getEntry(algorithm);
-    if (entry != null) return entry.baseType;
+    if (entry != null)
+      return entry.baseType;
     return UNKNOWN;
   }
 
-  public boolean isDSA(int algorithm)
-  {
+  public boolean isDSA(int algorithm) {
     return (baseType(algorithm) == DSA);
   }
 
   public KeyPair generateKeyPair(int algorithm, int keysize, boolean useLargeExp)
-      throws NoSuchAlgorithmException
-  {
+      throws NoSuchAlgorithmException {
     KeyPair pair = null;
-    switch (baseType(algorithm))
-    {
-      case RSA:
-      {
-        if (mRSAKeyGenerator == null)
-        {
+    switch (baseType(algorithm)) {
+      case RSA: {
+        if (mRSAKeyGenerator == null) {
           mRSAKeyGenerator = KeyPairGenerator.getInstance("RSA");
         }
 
         RSAKeyGenParameterSpec rsa_spec;
-        if (useLargeExp)
-        {
+        if (useLargeExp) {
           rsa_spec = new RSAKeyGenParameterSpec(keysize, RSAKeyGenParameterSpec.F4);
-        }
-        else
-        {
+        } else {
           rsa_spec = new RSAKeyGenParameterSpec(keysize, RSAKeyGenParameterSpec.F0);
         }
-        try
-        {
+        try {
           mRSAKeyGenerator.initialize(rsa_spec);
-        }
-        catch (InvalidAlgorithmParameterException e)
-        {
+        } catch (InvalidAlgorithmParameterException e) {
           // Fold the InvalidAlgorithmParameterException into our existing
           // thrown exception. Ugly, but requires less code change.
           throw new NoSuchAlgorithmException("invalid key parameter spec");
@@ -553,30 +525,23 @@ public class DnsKeyAlgorithm
         pair = mRSAKeyGenerator.generateKeyPair();
         break;
       }
-      case DSA:
-      {
-        if (mDSAKeyGenerator == null)
-        {
+      case DSA: {
+        if (mDSAKeyGenerator == null) {
           mDSAKeyGenerator = KeyPairGenerator.getInstance("DSA");
         }
         mDSAKeyGenerator.initialize(keysize);
         pair = mDSAKeyGenerator.generateKeyPair();
         break;
       }
-      case ECC_GOST:
-      {
-        if (mECGOSTKeyGenerator == null)
-        {
+      case ECC_GOST: {
+        if (mECGOSTKeyGenerator == null) {
           mECGOSTKeyGenerator = KeyPairGenerator.getInstance("ECGOST3410");
         }
 
-        ECParameterSpec ec_spec = getEllipticCurveParams(algorithm);
-        try
-        {
-          mECGOSTKeyGenerator.initialize(ec_spec);
-        }
-        catch (InvalidAlgorithmParameterException e)
-        {
+        ECParameterSpec ecSpec = getEllipticCurveParams(algorithm);
+        try {
+          mECGOSTKeyGenerator.initialize(ecSpec);
+        } catch (InvalidAlgorithmParameterException e) {
           // Fold the InvalidAlgorithmParameterException into our existing
           // thrown exception. Ugly, but requires less code change.
           throw new NoSuchAlgorithmException("invalid key parameter spec");
@@ -584,20 +549,15 @@ public class DnsKeyAlgorithm
         pair = mECGOSTKeyGenerator.generateKeyPair();
         break;
       }
-      case ECDSA:
-      {
-        if (mECKeyGenerator == null)
-        {
+      case ECDSA: {
+        if (mECKeyGenerator == null) {
           mECKeyGenerator = KeyPairGenerator.getInstance("EC");
         }
 
-        ECParameterSpec ec_spec = getEllipticCurveParams(algorithm);
-        try
-        {
-          mECKeyGenerator.initialize(ec_spec);
-        }
-        catch (InvalidAlgorithmParameterException e)
-        {
+        ECParameterSpec ecSpec = getEllipticCurveParams(algorithm);
+        try {
+          mECKeyGenerator.initialize(ecSpec);
+        } catch (InvalidAlgorithmParameterException e) {
           // Fold the InvalidAlgorithmParameterException into our existing
           // thrown exception. Ugly, but requires less code change.
           throw new NoSuchAlgorithmException("invalid key parameter spec");
@@ -605,20 +565,15 @@ public class DnsKeyAlgorithm
         pair = mECKeyGenerator.generateKeyPair();
         break;
       }
-      case EDDSA:
-      {
-        if (mEdKeyGenerator == null)
-        {
+      case EDDSA: {
+        if (mEdKeyGenerator == null) {
           mEdKeyGenerator = KeyPairGenerator.getInstance("EdDSA");
         }
 
-        EdDSAParameterSpec ed_spec = getEdwardsCurveParams(algorithm);
-        try
-        {
-          mEdKeyGenerator.initialize(ed_spec, new SecureRandom());
-        }
-        catch (InvalidAlgorithmParameterException e)
-        {
+        EdDSAParameterSpec edSpec = getEdwardsCurveParams(algorithm);
+        try {
+          mEdKeyGenerator.initialize(edSpec, new SecureRandom());
+        } catch (InvalidAlgorithmParameterException e) {
           // Fold the InvalidAlgorithmParameterException into our existing
           // thrown exception. Ugly, but requires less code change.
           throw new NoSuchAlgorithmException("invalid key parameter spec");
@@ -626,22 +581,21 @@ public class DnsKeyAlgorithm
         pair = mEdKeyGenerator.generateKeyPair();
         break;
       }
-    default:
-      throw new NoSuchAlgorithmException("Alg " + algorithm);
+      default:
+        throw new NoSuchAlgorithmException("Alg " + algorithm);
     }
 
     return pair;
   }
 
   public KeyPair generateKeyPair(int algorithm, int keysize)
-      throws NoSuchAlgorithmException
-  {
+      throws NoSuchAlgorithmException {
     return generateKeyPair(algorithm, keysize, false);
   }
 
-  public static DnsKeyAlgorithm getInstance()
-  {
-    if (mInstance == null) mInstance = new DnsKeyAlgorithm();
+  public static DnsKeyAlgorithm getInstance() {
+    if (mInstance == null)
+      mInstance = new DnsKeyAlgorithm();
     return mInstance;
   }
 }
